updated at: 2020-02-15 20:23, VRChat想定アバター「 こんちゃんモデル - A - 」 v2.0 - こんの店 - BOOTH

--- a/VRChat/52/941652.html
+++ b/VRChat/52/941652.html
@@ -3,26 +3,26 @@
   <head>
     <meta charset="utf-8">
     <title>
-      VRChat推奨アバター「 こんちゃんモデル - A - 」 v2.0 - こんの店 - BOOTH
+      VRChat想定アバター「 こんちゃんモデル - A - 」 v2.0 - こんの店 - BOOTH
     </title>
     <meta name="description" content=
-    "VRChat用のアバターです。 4838ポリゴンのローポリモデルになります。 ■セット内容 ・アバターデータ（Unity package file） ・VRChatアップロードマニュアル ・改変用PSDデータ ・改変用FBXデータ ・利用規約書 ■更新履歴 ・v1.0　公開 ・v1.1　VR対応、FBX同梱 ・v1.2　2018.11.11時点のVRC制作規定に対応 　　　　2018.11.11時点の最新SDKに対応 　　　　シェーダー差し替え、モデル微修正 ・v2.0　モデル改定、Oculus Quest版VRChat対応、利用規約改定 ■利用規約(2020年2月14日) 【規約について】">
+    "VRChat想定のアバターです。 4838ポリゴンのローポリモデルになります。 ■セット内容 ・アバターデータ（Unity package file） ・VRChatアップロードマニュアル ・改変用PSDデータ ・改変用FBXデータ ・利用規約書 ■更新履歴 ・v1.0　公開 ・v1.1　VR対応、FBX同梱 ・v1.2　2018.11.11時点のVRC制作規定に対応 　　　　2018.11.11時点の最新SDKに対応 　　　　シェーダー差し替え、モデル微修正 ・v2.0　モデル改定、Oculus Quest版VRChat対応、利用規約改定 ■利用規約(2020年2月15日) 【規約について】">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/941652">
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "VRChat推奨アバター「 こんちゃんモデル - A - 」 v2.0 - こんの店 - BOOTH">
+    "VRChat想定アバター「 こんちゃんモデル - A - 」 v2.0 - こんの店 - BOOTH">
     <meta name="twitter:description" content=
-    "VRChat用のアバターです。 4838ポリゴンのローポリモデルになります。 ■セット内容 ・アバターデータ（Unity package file） ・VRChatアップロードマニュアル ・改変用PSDデータ ・改変用FBXデータ ・利用規約書 ■更新履歴 ・v1.0　公開 ・v1.1　VR対応、FBX同梱 ・v1.2　2018.11.11時点のVRC制作規定に対応 　　　　2018.11.11時点の最新SDKに対応 　　　　シェーダー差し替え、モデル微修正 ・v2.0　モデル改定、Oculus Quest版VRChat対応、利用規約改定 ■利用規約(2020年2月14日) 【規約について】">
+    "VRChat想定のアバターです。 4838ポリゴンのローポリモデルになります。 ■セット内容 ・アバターデータ（Unity package file） ・VRChatアップロードマニュアル ・改変用PSDデータ ・改変用FBXデータ ・利用規約書 ■更新履歴 ・v1.0　公開 ・v1.1　VR対応、FBX同梱 ・v1.2　2018.11.11時点のVRC制作規定に対応 　　　　2018.11.11時点の最新SDKに対応 　　　　シェーダー差し替え、モデル微修正 ・v2.0　モデル改定、Oculus Quest版VRChat対応、利用規約改定 ■利用規約(2020年2月15日) 【規約について】">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/3767bf78-8003-4b42-a02b-9c9dd308c7e2/i/941652/85c86d18-1762-46d3-99ed-7f25b48d4ca2_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "VRChat推奨アバター「 こんちゃんモデル - A - 」 v2.0 - こんの店 - BOOTH">
+    "VRChat想定アバター「 こんちゃんモデル - A - 」 v2.0 - こんの店 - BOOTH">
     <meta property="og:description" content=
-    "VRChat用のアバターです。 4838ポリゴンのローポリモデルになります。 ■セット内容 ・アバターデータ（Unity package file） ・VRChatアップロードマニュアル ・改変用PSDデータ ・改変用FBXデータ ・利用規約書 ■更新履歴 ・v1.0　公開 ・v1.1　VR対応、FBX同梱 ・v1.2　2018.11.11時点のVRC制作規定に対応 　　　　2018.11.11時点の最新SDKに対応 　　　　シェーダー差し替え、モデル微修正 ・v2.0　モデル改定、Oculus Quest版VRChat対応、利用規約改定 ■利用規約(2020年2月14日) 【規約について】">
+    "VRChat想定のアバターです。 4838ポリゴンのローポリモデルになります。 ■セット内容 ・アバターデータ（Unity package file） ・VRChatアップロードマニュアル ・改変用PSDデータ ・改変用FBXデータ ・利用規約書 ■更新履歴 ・v1.0　公開 ・v1.1　VR対応、FBX同梱 ・v1.2　2018.11.11時点のVRC制作規定に対応 　　　　2018.11.11時点の最新SDKに対応 　　　　シェーダー差し替え、モデル微修正 ・v2.0　モデル改定、Oculus Quest版VRChat対応、利用規約改定 ■利用規約(2020年2月15日) 【規約について】">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/3767bf78-8003-4b42-a02b-9c9dd308c7e2/i/941652/85c86d18-1762-46d3-99ed-7f25b48d4ca2_base_resized.jpg">
     <meta property="og:url" content=
@@ -131,7 +131,7 @@
                         </div>
                         <h2 class=
                         "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
-                          VRChat推奨アバター「 こんちゃんモデル - A - 」 v2.0
+                          VRChat想定アバター「 こんちゃんモデル - A - 」 v2.0
                         </h2>
                         <div class="item-summary__caption"></div>
                       </header>
@@ -224,7 +224,7 @@
                           "https://booth.pm/ja/items/941652"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "VRChat推奨アバター「 こんちゃんモデル - A - 」 v2.0 | こんの店"
+                          "VRChat想定アバター「 こんちゃんモデル - A - 」 v2.0 | こんの店"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
@@ -244,7 +244,7 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "VRChat推奨アバター「 こんちゃんモデル - A - 」 v2.0"
+                            "VRChat想定アバター「 こんちゃんモデル - A - 」 v2.0"
                             class="market-item-detail-item-image"
                             src=
                             "https://booth.pximg.net/3767bf78-8003-4b42-a02b-9c9dd308c7e2/i/941652/85c86d18-1762-46d3-99ed-7f25b48d4ca2_base_resized.jpg">
@@ -254,7 +254,7 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "VRChat推奨アバター「 こんちゃんモデル - A - 」 v2.0"
+                            "VRChat想定アバター「 こんちゃんモデル - A - 」 v2.0"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/3767bf78-8003-4b42-a02b-9c9dd308c7e2/i/941652/37501522-bd3b-4122-8d9a-ee47b7c32ed7_base_resized.jpg">
@@ -264,7 +264,7 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "VRChat推奨アバター「 こんちゃんモデル - A - 」 v2.0"
+                            "VRChat想定アバター「 こんちゃんモデル - A - 」 v2.0"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/3767bf78-8003-4b42-a02b-9c9dd308c7e2/i/941652/2329d222-786d-4d71-984f-af0eb823b530_base_resized.jpg">
@@ -290,7 +290,7 @@
                         <div class=
                         "js-market-item-detail-description">
                           <p class="autolink u-text-wrap">
-                            VRChat用のアバターです。 4838ポリゴンのローポリモデルになります。
+                            VRChat想定のアバターです。 4838ポリゴンのローポリモデルになります。
                             ■セット内容 ・アバターデータ（Unity package file）
                             ・VRChatアップロードマニュアル ・改変用PSDデータ
                             ・改変用FBXデータ ・利用規約書 ■更新履歴 ・v1.0　公開
@@ -298,7 +298,7 @@
                             ・v1.2　2018.11.11時点のVRC制作規定に対応
                             　　　　2018.11.11時点の最新SDKに対応
                             　　　　シェーダー差し替え、モデル微修正 ・v2.0　モデル改定、Oculus
-                            Quest版VRChat対応、利用規約改定 ■利用規約(2020年2月14日)
+                            Quest版VRChat対応、利用規約改定 ■利用規約(2020年2月15日)
                             【規約について】
                             モデルをご購入いただいた時点で下記利用規約に同意したものとします。
                             この規約の内容は追記・変更される場合があり、変更された場合は最新のものが適応されます。
@@ -306,7 +306,7 @@
                             また本データを改変等を行った場合、著作権は製作者に帰属します。
                             【データ利用について】
                             VRChatでの利用を想定しておりますが、他サービスや作品など本規約に反しない範囲で自由にご利用いただけます。
-                            R-18およびR-18G、他者への誹謗中傷行為を含むもの、公序良俗に反した利用を禁止します。
+                            他者への誹謗中傷行為を含むもの、公序良俗に反した利用を禁止します。
                             またVRChat以外のアプリなどでご利用の場合、動作不良等が発生する可能性がございますので予めご了承ください。
                             【データについて】
                             本データはVRChatが提供する2020年2月14日現在の最新SDKと規定に基づき制作されています。
