--- a/VRChat/34/1330734.html
+++ b/VRChat/34/1330734.html
@@ -81,7 +81,7 @@
         <div class="market-item-detail u-bg-white"
         data-product-brand="o10ufu" data-product-category="127"
         data-product-id="1330734" data-product-list="market_show"
-        data-product-price="500" data-tracking="detail_item">
+        data-product-price="300" data-tracking="detail_item">
           <nav>
             <div class="breadcrumbs u-border-b u-border-100">
               <div class="container">
@@ -174,7 +174,7 @@
                                   </div>
                                   <div class=
                                   "variation-price u-text-right">
-                                    ¥ 500
+                                    ¥ 300
                                   </div>
                                 </div>
                                 <div class="variation-cart">
@@ -187,7 +187,7 @@
                                       "patch"><button class=
                                       "btn add-cart full-length"
                                       data-product-id="1330734"
-                                      data-product-price="500"
+                                      data-product-price="300"
                                       data-product-brand="o10ufu"
                                       data-product-category="127"
                                       data-product-variant=
@@ -203,7 +203,7 @@
                                         <button class=
                                         "btn add-cart full-length"
                                         data-product-id="1330734"
-                                        data-product-price="500"
+                                        data-product-price="300"
                                         data-product-brand="o10ufu"
                                         data-product-category="127"
                                         data-product-variant=
@@ -440,6 +440,8 @@
                             2019.08.24
                             テクスチャを調整しました。暗闇でも光るようになりました。（Ring_Of_Force_Field_rp2_v101.zip）
                             2019.08.25 　価格を￥300→￥500へ変更しました。
+                            2020.02.16
+                            　いいねが90を超えてきましたので価格を￥500→￥300へ変更しました。
                             【取り付け方】 対応するボーンにつけてください。 【個別規定】- ◆利用規約◆
                             この利用規約は（以下、「本規約」といいます。）はおとウフがモデルデータの利用条件を定めるものです。本規約に従ってユーザーの皆様はご利用いただきます。
                             第1条（適用）
