--- a/VRChat/87/1152387.html
+++ b/VRChat/87/1152387.html
@@ -3,28 +3,28 @@
   <head>
     <meta charset="utf-8">
     <title>
-      RIOT ARMOR SGM-02【VFR Edition】 - Isp-tec - BOOTH
+      RIOT ARMOR SGM-02【VFR Edition_1.2】 - Isp-tec - BOOTH
     </title>
     <meta name="description" content=
-    "2019/8/18 HDテクスチャーを公開しました！ 2019/6/29 ヴァリアールライセンス公認のヴィランカラーと、Vケットスタンプラリーの景品として作られた単眼顔のバージョンを追加するアップデートをしました！ 核戦争直前の物資が不足していた混乱期に、暴動鎮圧用に作られたタイプのアーマーです。 終末を迎えた今でも汎用性の高い装備として中級程度の探索者が好む傾向にあります。 ◆VAREAL　LICENSED◆ 　本商品は『ヴァリアールライセンス』認可商品である。">
+    "2020/2/15 軽量化と質感をアップグレードしたモデルを公開しました 2019/8/18 HDテクスチャーを公開しました！ 2019/6/29 ヴァリアールライセンス公認のヴィランカラーと、Vケットスタンプラリーの景品として作られた単眼顔のバージョンを追加するアップデートをしました！ 核戦争直前の物資が不足していた混乱期に、暴動鎮圧用に作られたタイプのアーマーです。 終末を迎えた今でも汎用性の高い装備として中級程度の探索者が好む傾向にあります。 ◆VAREAL　LICENSED◆ 　本商品は『ヴァリアールライセンス』認可商品である。">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1152387">
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "RIOT ARMOR SGM-02【VFR Edition】 - Isp-tec - BOOTH">
+    "RIOT ARMOR SGM-02【VFR Edition_1.2】 - Isp-tec - BOOTH">
     <meta name="twitter:description" content=
-    "2019/8/18 HDテクスチャーを公開しました！ 2019/6/29 ヴァリアールライセンス公認のヴィランカラーと、Vケットスタンプラリーの景品として作られた単眼顔のバージョンを追加するアップデートをしました！ 核戦争直前の物資が不足していた混乱期に、暴動鎮圧用に作られたタイプのアーマーです。 終末を迎えた今でも汎用性の高い装備として中級程度の探索者が好む傾向にあります。 ◆VAREAL　LICENSED◆ 　本商品は『ヴァリアールライセンス』認可商品である。">
+    "2020/2/15 軽量化と質感をアップグレードしたモデルを公開しました 2019/8/18 HDテクスチャーを公開しました！ 2019/6/29 ヴァリアールライセンス公認のヴィランカラーと、Vケットスタンプラリーの景品として作られた単眼顔のバージョンを追加するアップデートをしました！ 核戦争直前の物資が不足していた混乱期に、暴動鎮圧用に作られたタイプのアーマーです。 終末を迎えた今でも汎用性の高い装備として中級程度の探索者が好む傾向にあります。 ◆VAREAL　LICENSED◆ 　本商品は『ヴァリアールライセンス』認可商品である。">
     <meta name="twitter:image" content=
-    "https://booth.pximg.net/c/620x620/529ab7c8-ac9e-418b-9cf8-c509712970e1/i/1152387/6fc3cabc-e0a2-4f55-b589-31e027e67731_base_resized.jpg">
+    "https://booth.pximg.net/c/620x620/529ab7c8-ac9e-418b-9cf8-c509712970e1/i/1152387/cbdbea13-d6a3-4e3e-84d4-ae143f9fed68_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "RIOT ARMOR SGM-02【VFR Edition】 - Isp-tec - BOOTH">
+    "RIOT ARMOR SGM-02【VFR Edition_1.2】 - Isp-tec - BOOTH">
     <meta property="og:description" content=
-    "2019/8/18 HDテクスチャーを公開しました！ 2019/6/29 ヴァリアールライセンス公認のヴィランカラーと、Vケットスタンプラリーの景品として作られた単眼顔のバージョンを追加するアップデートをしました！ 核戦争直前の物資が不足していた混乱期に、暴動鎮圧用に作られたタイプのアーマーです。 終末を迎えた今でも汎用性の高い装備として中級程度の探索者が好む傾向にあります。 ◆VAREAL　LICENSED◆ 　本商品は『ヴァリアールライセンス』認可商品である。">
+    "2020/2/15 軽量化と質感をアップグレードしたモデルを公開しました 2019/8/18 HDテクスチャーを公開しました！ 2019/6/29 ヴァリアールライセンス公認のヴィランカラーと、Vケットスタンプラリーの景品として作られた単眼顔のバージョンを追加するアップデートをしました！ 核戦争直前の物資が不足していた混乱期に、暴動鎮圧用に作られたタイプのアーマーです。 終末を迎えた今でも汎用性の高い装備として中級程度の探索者が好む傾向にあります。 ◆VAREAL　LICENSED◆ 　本商品は『ヴァリアールライセンス』認可商品である。">
     <meta property="og:image" content=
-    "https://booth.pximg.net/c/620x620/529ab7c8-ac9e-418b-9cf8-c509712970e1/i/1152387/6fc3cabc-e0a2-4f55-b589-31e027e67731_base_resized.jpg">
+    "https://booth.pximg.net/c/620x620/529ab7c8-ac9e-418b-9cf8-c509712970e1/i/1152387/cbdbea13-d6a3-4e3e-84d4-ae143f9fed68_base_resized.jpg">
     <meta property="og:url" content=
     "https://booth.pm/ja/items/1152387">
     <meta name="skip_auto_login" content="">
@@ -80,7 +80,7 @@
         <div class="market-item-detail u-bg-white"
         data-product-brand="ispvitamin" data-product-category="127"
         data-product-id="1152387" data-product-list="market_show"
-        data-product-price="1550" data-tracking="detail_item">
+        data-product-price="2200" data-tracking="detail_item">
           <nav>
             <div class="breadcrumbs u-border-b u-border-100">
               <div class="container">
@@ -144,7 +144,7 @@
                         </div>
                         <h2 class=
                         "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
-                          RIOT ARMOR SGM-02【VFR Edition】
+                          RIOT ARMOR SGM-02【VFR Edition_1.2】
                         </h2>
                         <div class="item-summary__caption"></div>
                       </header>
@@ -181,7 +181,7 @@
                                   </div>
                                   <div class=
                                   "variation-price u-text-right">
-                                    ¥ 1,550
+                                    ¥ 2,200
                                   </div>
                                 </div>
                                 <div class="variation-cart">
@@ -194,7 +194,7 @@
                                       "patch"><button class=
                                       "btn add-cart full-length"
                                       data-product-id="1152387"
-                                      data-product-price="1550"
+                                      data-product-price="2200"
                                       data-product-brand=
                                       "ispvitamin"
                                       data-product-category="127"
@@ -211,7 +211,7 @@
                                         <button class=
                                         "btn add-cart full-length"
                                         data-product-id="1152387"
-                                        data-product-price="1550"
+                                        data-product-price="2200"
                                         data-product-brand=
                                         "ispvitamin"
                                         data-product-category="127"
@@ -238,7 +238,7 @@
                           "https://booth.pm/ja/items/1152387"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "RIOT ARMOR SGM-02【VFR Edition】 | Isp-tec company(被甲連合技術開発及兵装販売部門)"
+                          "RIOT ARMOR SGM-02【VFR Edition_1.2】 | Isp-tec company(被甲連合技術開発及兵装販売部門)"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
@@ -258,69 +258,20 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "RIOT ARMOR SGM-02【VFR Edition】" class=
-                            "market-item-detail-item-image" src=
-                            "https://booth.pximg.net/529ab7c8-ac9e-418b-9cf8-c509712970e1/i/1152387/6fc3cabc-e0a2-4f55-b589-31e027e67731_base_resized.jpg">
+                            "RIOT ARMOR SGM-02【VFR Edition_1.2】"
+                            class="market-item-detail-item-image"
+                            src=
+                            "https://booth.pximg.net/529ab7c8-ac9e-418b-9cf8-c509712970e1/i/1152387/cbdbea13-d6a3-4e3e-84d4-ae143f9fed68_base_resized.jpg">
                           </div>
                         </div>
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "RIOT ARMOR SGM-02【VFR Edition】" class=
-                            "market-item-detail-item-image"
+                            "RIOT ARMOR SGM-02【VFR Edition_1.2】"
+                            class="market-item-detail-item-image"
                             data-lazy=
-                            "https://booth.pximg.net/529ab7c8-ac9e-418b-9cf8-c509712970e1/i/1152387/3c9f3158-3aba-49e6-a0a6-9bcbcfd5ead7_base_resized.jpg">
-                          </div>
-                        </div>
-                        <div>
-                          <div class=
-                          "market-item-detail-item-image-wrapper">
-                            <img alt=
-                            "RIOT ARMOR SGM-02【VFR Edition】" class=
-                            "market-item-detail-item-image"
-                            data-lazy=
-                            "https://booth.pximg.net/529ab7c8-ac9e-418b-9cf8-c509712970e1/i/1152387/e9d14a41-e4b9-4670-94e4-63b8d00fe348_base_resized.jpg">
-                          </div>
-                        </div>
-                        <div>
-                          <div class=
-                          "market-item-detail-item-image-wrapper">
-                            <img alt=
-                            "RIOT ARMOR SGM-02【VFR Edition】" class=
-                            "market-item-detail-item-image"
-                            data-lazy=
-                            "https://booth.pximg.net/529ab7c8-ac9e-418b-9cf8-c509712970e1/i/1152387/11acee67-4913-4f90-b1ee-e35c1afb5d60_base_resized.jpg">
-                          </div>
-                        </div>
-                        <div>
-                          <div class=
-                          "market-item-detail-item-image-wrapper">
-                            <img alt=
-                            "RIOT ARMOR SGM-02【VFR Edition】" class=
-                            "market-item-detail-item-image"
-                            data-lazy=
-                            "https://booth.pximg.net/529ab7c8-ac9e-418b-9cf8-c509712970e1/i/1152387/f140249b-a638-470f-a978-84c7529a6332_base_resized.jpg">
-                          </div>
-                        </div>
-                        <div>
-                          <div class=
-                          "market-item-detail-item-image-wrapper">
-                            <img alt=
-                            "RIOT ARMOR SGM-02【VFR Edition】" class=
-                            "market-item-detail-item-image"
-                            data-lazy=
-                            "https://booth.pximg.net/529ab7c8-ac9e-418b-9cf8-c509712970e1/i/1152387/212d88bc-43e4-4158-9352-fb0c2f45b789_base_resized.jpg">
-                          </div>
-                        </div>
-                        <div>
-                          <div class=
-                          "market-item-detail-item-image-wrapper">
-                            <img alt=
-                            "RIOT ARMOR SGM-02【VFR Edition】" class=
-                            "market-item-detail-item-image"
-                            data-lazy=
-                            "https://booth.pximg.net/529ab7c8-ac9e-418b-9cf8-c509712970e1/i/1152387/ee811a78-4bf5-4f9f-a6b1-e63b08a9a31c_base_resized.jpg">
+                            "https://booth.pximg.net/529ab7c8-ac9e-418b-9cf8-c509712970e1/i/1152387/20cf5445-d252-467a-bc12-cf69e57bf2c9_base_resized.jpg">
                           </div>
                         </div>
                       </div>
@@ -328,37 +279,18 @@
                         <a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/529ab7c8-ac9e-418b-9cf8-c509712970e1/i/1152387/6fc3cabc-e0a2-4f55-b589-31e027e67731_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/529ab7c8-ac9e-418b-9cf8-c509712970e1/i/1152387/cbdbea13-d6a3-4e3e-84d4-ae143f9fed68_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/529ab7c8-ac9e-418b-9cf8-c509712970e1/i/1152387/3c9f3158-3aba-49e6-a0a6-9bcbcfd5ead7_base_resized.jpg">
-                        </div></a><a class="pointer">
-                        <div class="slick-thumbnail-border">
-                          <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/529ab7c8-ac9e-418b-9cf8-c509712970e1/i/1152387/e9d14a41-e4b9-4670-94e4-63b8d00fe348_base_resized.jpg">
-                        </div></a><a class="pointer">
-                        <div class="slick-thumbnail-border">
-                          <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/529ab7c8-ac9e-418b-9cf8-c509712970e1/i/1152387/11acee67-4913-4f90-b1ee-e35c1afb5d60_base_resized.jpg">
-                        </div></a><a class="pointer">
-                        <div class="slick-thumbnail-border">
-                          <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/529ab7c8-ac9e-418b-9cf8-c509712970e1/i/1152387/f140249b-a638-470f-a978-84c7529a6332_base_resized.jpg">
-                        </div></a><a class="pointer">
-                        <div class="slick-thumbnail-border">
-                          <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/529ab7c8-ac9e-418b-9cf8-c509712970e1/i/1152387/212d88bc-43e4-4158-9352-fb0c2f45b789_base_resized.jpg">
-                        </div></a><a class="pointer">
-                        <div class="slick-thumbnail-border">
-                          <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/529ab7c8-ac9e-418b-9cf8-c509712970e1/i/1152387/ee811a78-4bf5-4f9f-a6b1-e63b08a9a31c_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/529ab7c8-ac9e-418b-9cf8-c509712970e1/i/1152387/20cf5445-d252-467a-bc12-cf69e57bf2c9_base_resized.jpg">
                         </div></a>
                       </div>
                       <section>
                         <div class=
                         "js-market-item-detail-description">
                           <p class="autolink u-text-wrap">
+                            2020/2/15 軽量化と質感をアップグレードしたモデルを公開しました
                             2019/8/18 HDテクスチャーを公開しました！ 2019/6/29
                             ヴァリアールライセンス公認のヴィランカラーと、Vケットスタンプラリーの景品として作られた単眼顔のバージョンを追加するアップデートをしました！
                             核戦争直前の物資が不足していた混乱期に、暴動鎮圧用に作られたタイプのアーマーです。
