updated at: 2020-02-16 21:59, 愛奈（AINA）【▲3994ローポリ アバター or 素体用3Dモデル】 - 奈良阪配本地 - BOOTH

--- a/VRChat/90/1319390.html
+++ b/VRChat/90/1319390.html
@@ -237,6 +237,49 @@
                                       <div>
                                         &nbsp;(9.06 MB)
                                       </div>
+                                    </div></a><a class=
+                                    "btn add-cart full-length"
+                                    title="aina-package-0.6.1.zip"
+                                    href=
+                                    "https://booth.pm/downloadables/905547">
+                                    <div class="u-d-block">
+                                      <span class=
+                                      "cmd-label">無料ダウンロード</span>
+                                    </div>
+                                    <div class=
+                                    "u-d-flex u-flex-wrap u-justify-content-center u-tpg-caption1 u-fw-normal">
+                                      <div class=
+                                      "u-text-ellipsis u-max-w-50">
+                                        aina-package-0.6.1
+                                      </div>
+                                      <div>
+                                        .zip
+                                      </div>
+                                      <div>
+                                        &nbsp;(9.48 MB)
+                                      </div>
+                                    </div></a><a class=
+                                    "btn add-cart full-length"
+                                    title=
+                                    "pony-tail-01-pmx-test.zip"
+                                    href=
+                                    "https://booth.pm/downloadables/906591">
+                                    <div class="u-d-block">
+                                      <span class=
+                                      "cmd-label">無料ダウンロード</span>
+                                    </div>
+                                    <div class=
+                                    "u-d-flex u-flex-wrap u-justify-content-center u-tpg-caption1 u-fw-normal">
+                                      <div class=
+                                      "u-text-ellipsis u-max-w-50">
+                                        pony-tail-01-pmx-test
+                                      </div>
+                                      <div>
+                                        .zip
+                                      </div>
+                                      <div>
+                                        &nbsp;(987 KB)
+                                      </div>
                                     </div></a>
                                   </div>
                                 </div>
