--- a/VRChat/87/1305687.html
+++ b/VRChat/87/1305687.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      【3Dモデル】オニガワラ社製汎用ドローンv1.1 - オニガワラインダストリ - BOOTH
+      【3Dモデル】オニガワラ社製汎用ドローンv1.1 - ONIGAWARA INDUSTRY - BOOTH
     </title>
     <meta name="description" content=
     "［2019/04/08更新］ Prefabに不具合があった為更新しました。 また、Prefab内容を変更しました。 オニガワラ・インダストリの汎用ドローンです。 白と黒緑の２パターンが入っています。まばたきアニメ付きです。 SpringJointが入ったPrefabも付属されているので、アバターに遅れてついてこさせることが出来ます。 ※自分視点だとぴったりくっ付いて見えます。">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "【3Dモデル】オニガワラ社製汎用ドローンv1.1 - オニガワラインダストリ - BOOTH">
+    "【3Dモデル】オニガワラ社製汎用ドローンv1.1 - ONIGAWARA INDUSTRY - BOOTH">
     <meta name="twitter:description" content=
     "［2019/04/08更新］ Prefabに不具合があった為更新しました。 また、Prefab内容を変更しました。 オニガワラ・インダストリの汎用ドローンです。 白と黒緑の２パターンが入っています。まばたきアニメ付きです。 SpringJointが入ったPrefabも付属されているので、アバターに遅れてついてこさせることが出来ます。 ※自分視点だとぴったりくっ付いて見えます。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/ec467e09-9e3c-4fb6-8a6a-55f885c9820b/i/1305687/1b6db110-126b-45c8-9545-229afe2176ad_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "【3Dモデル】オニガワラ社製汎用ドローンv1.1 - オニガワラインダストリ - BOOTH">
+    "【3Dモデル】オニガワラ社製汎用ドローンv1.1 - ONIGAWARA INDUSTRY - BOOTH">
     <meta property="og:description" content=
     "［2019/04/08更新］ Prefabに不具合があった為更新しました。 また、Prefab内容を変更しました。 オニガワラ・インダストリの汎用ドローンです。 白と黒緑の２パターンが入っています。まばたきアニメ付きです。 SpringJointが入ったPrefabも付属されているので、アバターに遅れてついてこさせることが出来ます。 ※自分視点だとぴったりくっ付いて見えます。">
     <meta property="og:image" content=
@@ -122,11 +122,11 @@
                           href="https://captainworkshop.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="オニガワラインダストリ" class=
+                            <img alt="ONIGAWARA INDUSTRY" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/4944666/icon_image/58d610c0-aead-4d95-89cf-e02d0a849a71_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              オニガワラインダストリ
+                              ONIGAWARA INDUSTRY
                             </div>
                           </div></a>
                         </div>
@@ -276,7 +276,7 @@
                           "https://booth.pm/ja/items/1305687"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "【3Dモデル】オニガワラ社製汎用ドローンv1.1 | オニガワラインダストリ"
+                          "【3Dモデル】オニガワラ社製汎用ドローンv1.1 | ONIGAWARA INDUSTRY"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
