--- a/VRChat/50/1294450.html
+++ b/VRChat/50/1294450.html
@@ -552,6 +552,17 @@
                               "search-guide-tablet-label-inner">
                                 VRC想定
                               </div>
+                            </div></a><a class=
+                            "search-guide-tablet" data-tracking=
+                            "click" data-product-list=
+                            "from market_show via tag_list to search_index"
+                            href=
+                            "https://booth.pm/ja/search/%E3%81%B5%E3%81%83%E3%81%8E%E3%82%85%E3%81%82%E3%81%B0%E3%81%9F%E3%83%BC">
+                            <div class="search-guide-tablet-label">
+                              <div class=
+                              "search-guide-tablet-label-inner">
+                                ふぃぎゅあばたー
+                              </div>
                             </div></a>
                           </div>
                         </div><a class=
