--- a/VRChat/06/1280906.html
+++ b/VRChat/06/1280906.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      あやかしマートのあんぱんと牛乳 - オニガワラインダストリ - BOOTH
+      あやかしマートのあんぱんと牛乳 - ONIGAWARA INDUSTRY - BOOTH
     </title>
     <meta name="description" content=
     "あやかしマートのあんぱん.Fbxです。260ポリゴンです。牛乳をオマケに入れました。">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "あやかしマートのあんぱんと牛乳 - オニガワラインダストリ - BOOTH">
+    "あやかしマートのあんぱんと牛乳 - ONIGAWARA INDUSTRY - BOOTH">
     <meta name="twitter:description" content=
     "あやかしマートのあんぱん.Fbxです。260ポリゴンです。牛乳をオマケに入れました。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/ec467e09-9e3c-4fb6-8a6a-55f885c9820b/i/1280906/b59ed588-085a-4015-a33a-bf141d2b1411_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "あやかしマートのあんぱんと牛乳 - オニガワラインダストリ - BOOTH">
+    "あやかしマートのあんぱんと牛乳 - ONIGAWARA INDUSTRY - BOOTH">
     <meta property="og:description" content=
     "あやかしマートのあんぱん.Fbxです。260ポリゴンです。牛乳をオマケに入れました。">
     <meta property="og:image" content=
@@ -122,11 +122,11 @@
                           href="https://captainworkshop.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="オニガワラインダストリ" class=
+                            <img alt="ONIGAWARA INDUSTRY" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/4944666/icon_image/58d610c0-aead-4d95-89cf-e02d0a849a71_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              オニガワラインダストリ
+                              ONIGAWARA INDUSTRY
                             </div>
                           </div></a>
                         </div>
@@ -275,7 +275,8 @@
                           <a data-url=
                           "https://booth.pm/ja/items/1280906"
                           data-lang="ja" data-hashtags="booth_pm"
-                          data-text="あやかしマートのあんぱんと牛乳 | オニガワラインダストリ"
+                          data-text=
+                          "あやかしマートのあんぱんと牛乳 | ONIGAWARA INDUSTRY"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
