updated at: 2020-02-16 23:53, - 3Dオリジナルカスタムモデル - ZENA - - 電脳屋(NEKOMI). - BOOTH

--- a/VRChat/74/1201274.html
+++ b/VRChat/74/1201274.html
@@ -6,7 +6,7 @@
       - 3Dオリジナルカスタムモデル - ZENA - - 電脳屋(NEKOMI). - BOOTH
     </title>
     <meta name="description" content=
-    "- オリジナル3Dカスタムモデル - ZENA - とある研究施設で生産されている拡張性の高い07型アンドロイドモデルです。 一切処理を行わないShaderを付属 デフォルトShader:UTS2( https://unity-chan.com/download/releaseNote.php?id=UTS2_0 )、FakeBloomShader(ほたて@HHOTATEA_VRC https://booth.pm/ja/items/1382159 )UnlitWF( https://github.com/whiteflare/Unlit_WF_ShaderSuite/wiki">
+    "- オリジナル3Dカスタムモデル - ZENA - とある研究施設で生産されている拡張性の高い07型アンドロイドモデルです。 調整中Discode：URL（　https://discord.gg/KfVE8NW　）試着会等の連絡を行ったりもします。We will also contact you for a try-on party. 一切処理を行わないShaderを付属 デフォルトShader:UTS2( https://unity-chan.com/download/releaseNote.php?id=UTS2_0 )、FakeBloomShader(ほたて@HHOTATEA_VRC">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1201274">
@@ -15,14 +15,14 @@
     <meta name="twitter:title" content=
     "- 3Dオリジナルカスタムモデル - ZENA - - 電脳屋(NEKOMI). - BOOTH">
     <meta name="twitter:description" content=
-    "- オリジナル3Dカスタムモデル - ZENA - とある研究施設で生産されている拡張性の高い07型アンドロイドモデルです。 一切処理を行わないShaderを付属 デフォルトShader:UTS2( https://unity-chan.com/download/releaseNote.php?id=UTS2_0 )、FakeBloomShader(ほたて@HHOTATEA_VRC https://booth.pm/ja/items/1382159 )UnlitWF( https://github.com/whiteflare/Unlit_WF_ShaderSuite/wiki">
+    "- オリジナル3Dカスタムモデル - ZENA - とある研究施設で生産されている拡張性の高い07型アンドロイドモデルです。 調整中Discode：URL（　https://discord.gg/KfVE8NW　）試着会等の連絡を行ったりもします。We will also contact you for a try-on party. 一切処理を行わないShaderを付属 デフォルトShader:UTS2( https://unity-chan.com/download/releaseNote.php?id=UTS2_0 )、FakeBloomShader(ほたて@HHOTATEA_VRC">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/3923a6a5-7600-4cc2-9240-d92591e77ceb/i/1201274/38129f90-9b2f-42cf-b932-f8a7395e07c9_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "- 3Dオリジナルカスタムモデル - ZENA - - 電脳屋(NEKOMI). - BOOTH">
     <meta property="og:description" content=
-    "- オリジナル3Dカスタムモデル - ZENA - とある研究施設で生産されている拡張性の高い07型アンドロイドモデルです。 一切処理を行わないShaderを付属 デフォルトShader:UTS2( https://unity-chan.com/download/releaseNote.php?id=UTS2_0 )、FakeBloomShader(ほたて@HHOTATEA_VRC https://booth.pm/ja/items/1382159 )UnlitWF( https://github.com/whiteflare/Unlit_WF_ShaderSuite/wiki">
+    "- オリジナル3Dカスタムモデル - ZENA - とある研究施設で生産されている拡張性の高い07型アンドロイドモデルです。 調整中Discode：URL（　https://discord.gg/KfVE8NW　）試着会等の連絡を行ったりもします。We will also contact you for a try-on party. 一切処理を行わないShaderを付属 デフォルトShader:UTS2( https://unity-chan.com/download/releaseNote.php?id=UTS2_0 )、FakeBloomShader(ほたて@HHOTATEA_VRC">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/3923a6a5-7600-4cc2-9240-d92591e77ceb/i/1201274/38129f90-9b2f-42cf-b932-f8a7395e07c9_base_resized.jpg">
     <meta property="og:url" content=
@@ -541,7 +541,10 @@
                           <p class="autolink u-text-wrap">
                             - オリジナル3Dカスタムモデル - ZENA -
                             とある研究施設で生産されている拡張性の高い07型アンドロイドモデルです。
-                            一切処理を行わないShaderを付属 デフォルトShader:UTS2(
+                            調整中Discode：URL（　https://discord.gg/KfVE8NW　）試着会等の連絡を行ったりもします。We
+                            will also contact you for a try-on
+                            party. 一切処理を行わないShaderを付属
+                            デフォルトShader:UTS2(
                             https://unity-chan.com/download/releaseNote.php?id=UTS2_0
                             )、FakeBloomShader(ほたて@HHOTATEA_VRC
                             https://booth.pm/ja/items/1382159
