--- a/VRChat/07/1351607.html
+++ b/VRChat/07/1351607.html
@@ -81,7 +81,7 @@
         <div class="market-item-detail u-bg-white"
         data-product-brand="ayashiimitsu" data-product-category=
         "127" data-product-id="1351607" data-product-list=
-        "market_show" data-product-price="0" data-tracking=
+        "market_show" data-product-price="100" data-tracking=
         "detail_item">
           <nav>
             <div class="breadcrumbs u-border-b u-border-100">
@@ -163,6 +163,9 @@
                                 <div class=
                                 "lo-grid u-align-items-center">
                                   <div class="lo-grid-cell">
+                                    <div class="variation-name">
+                                      CV缶
+                                    </div>
                                     <div class=
                                     "variation-caption variation-caption--type">
                                       ダウンロード商品
@@ -196,6 +199,70 @@
                                         &nbsp;(5.18 MB)
                                       </div>
                                     </div></a>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                          </li>
+                          <li class="variation-item">
+                            <div class="lo-grid lo-grid-top">
+                              <div class="variation-item-summary">
+                                <div class=
+                                "lo-grid u-align-items-center">
+                                  <div class="lo-grid-cell">
+                                    <div class="variation-name">
+                                      ブースト版（内容物は同じです）
+                                    </div>
+                                    <div class=
+                                    "variation-caption variation-caption--type">
+                                      ダウンロード商品
+                                    </div>
+                                  </div>
+                                  <div class=
+                                  "variation-price u-text-right">
+                                    ¥ 100
+                                  </div>
+                                </div>
+                                <div class="variation-cart">
+                                  <div class="cart-button-wrap">
+                                    <form class="button_to" method=
+                                    "post" action=
+                                    "https://ayashiimitsu.booth.pm/cart?added_to_cart=true&amp;via=market">
+                                      <input type="hidden" name=
+                                      "_method" value=
+                                      "patch"><button class=
+                                      "btn add-cart full-length"
+                                      data-product-id="1351607"
+                                      data-product-price="100"
+                                      data-product-brand=
+                                      "ayashiimitsu"
+                                      data-product-category="127"
+                                      data-product-variant=
+                                      "2928357" data-tracking=
+                                      "add_item" data-product-list=
+                                      "from market_show via market to add_item"
+                                      type="submit"><input type=
+                                      "hidden" name=
+                                      "cart_item[variation_id]" id=
+                                      "cart_item_variation_id"
+                                      value="2928357"></button>
+                                      <div class="cmd-label">
+                                        <button class=
+                                        "btn add-cart full-length"
+                                        data-product-id="1351607"
+                                        data-product-price="100"
+                                        data-product-brand=
+                                        "ayashiimitsu"
+                                        data-product-category="127"
+                                        data-product-variant=
+                                        "2928357" data-tracking=
+                                        "add_item"
+                                        data-product-list=
+                                        "from market_show via market to add_item"
+                                        type=
+                                        "submit">カートに入れる</button>
+                                      </div>
+                                    </form>
                                   </div>
                                 </div>
                               </div>
