--- a/VRChat/84/1134184.html
+++ b/VRChat/84/1134184.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      特濃4.6ロゴ［黒と白］ - オニガワラインダストリ - BOOTH
+      特濃4.6ロゴ［黒と白］ - ONIGAWARA INDUSTRY - BOOTH
     </title>
     <meta name="description" content=
     "特濃4.6と描かれたロゴ。透過黒と白です。 フリーですのでご自由にお使いください。 胸はかんけいないです">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "特濃4.6ロゴ［黒と白］ - オニガワラインダストリ - BOOTH">
+    "特濃4.6ロゴ［黒と白］ - ONIGAWARA INDUSTRY - BOOTH">
     <meta name="twitter:description" content=
     "特濃4.6と描かれたロゴ。透過黒と白です。 フリーですのでご自由にお使いください。 胸はかんけいないです">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/ec467e09-9e3c-4fb6-8a6a-55f885c9820b/i/1134184/d168485f-1c11-4d13-b128-477a0e7c3d2b_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "特濃4.6ロゴ［黒と白］ - オニガワラインダストリ - BOOTH">
+    "特濃4.6ロゴ［黒と白］ - ONIGAWARA INDUSTRY - BOOTH">
     <meta property="og:description" content=
     "特濃4.6と描かれたロゴ。透過黒と白です。 フリーですのでご自由にお使いください。 胸はかんけいないです">
     <meta property="og:image" content=
@@ -121,11 +121,11 @@
                           href="https://captainworkshop.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="オニガワラインダストリ" class=
+                            <img alt="ONIGAWARA INDUSTRY" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/4944666/icon_image/58d610c0-aead-4d95-89cf-e02d0a849a71_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              オニガワラインダストリ
+                              ONIGAWARA INDUSTRY
                             </div>
                           </div></a>
                         </div>
@@ -207,7 +207,8 @@
                           <a data-url=
                           "https://booth.pm/ja/items/1134184"
                           data-lang="ja" data-hashtags="booth_pm"
-                          data-text="特濃4.6ロゴ［黒と白］ | オニガワラインダストリ"
+                          data-text=
+                          "特濃4.6ロゴ［黒と白］ | ONIGAWARA INDUSTRY"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
