--- a/VRChat/78/1134178.html
+++ b/VRChat/78/1134178.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      低脂肪乳ロゴ［白と黒］ - オニガワラインダストリ - BOOTH
+      低脂肪乳ロゴ［白と黒］ - ONIGAWARA INDUSTRY - BOOTH
     </title>
     <meta name="description" content=
     "フリーの低脂肪乳ロゴです。ご自由にお使いください。 透過の白と黒２枚です。 胸はかんけいないです。">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "低脂肪乳ロゴ［白と黒］ - オニガワラインダストリ - BOOTH">
+    "低脂肪乳ロゴ［白と黒］ - ONIGAWARA INDUSTRY - BOOTH">
     <meta name="twitter:description" content=
     "フリーの低脂肪乳ロゴです。ご自由にお使いください。 透過の白と黒２枚です。 胸はかんけいないです。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/ec467e09-9e3c-4fb6-8a6a-55f885c9820b/i/1134178/1c15f70d-9cd1-46f7-a811-7988f2fc989e_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "低脂肪乳ロゴ［白と黒］ - オニガワラインダストリ - BOOTH">
+    "低脂肪乳ロゴ［白と黒］ - ONIGAWARA INDUSTRY - BOOTH">
     <meta property="og:description" content=
     "フリーの低脂肪乳ロゴです。ご自由にお使いください。 透過の白と黒２枚です。 胸はかんけいないです。">
     <meta property="og:image" content=
@@ -121,11 +121,11 @@
                           href="https://captainworkshop.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="オニガワラインダストリ" class=
+                            <img alt="ONIGAWARA INDUSTRY" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/4944666/icon_image/58d610c0-aead-4d95-89cf-e02d0a849a71_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              オニガワラインダストリ
+                              ONIGAWARA INDUSTRY
                             </div>
                           </div></a>
                         </div>
@@ -207,7 +207,8 @@
                           <a data-url=
                           "https://booth.pm/ja/items/1134178"
                           data-lang="ja" data-hashtags="booth_pm"
-                          data-text="低脂肪乳ロゴ［白と黒］ | オニガワラインダストリ"
+                          data-text=
+                          "低脂肪乳ロゴ［白と黒］ | ONIGAWARA INDUSTRY"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
