updated at: 2020-02-17 18:45, ３Dモデル　ソファ（黒茶）　ゲーム・漫画等利用可 - Papyrus Project - BOOTH

--- a/VRChat/92/1035292.html
+++ b/VRChat/92/1035292.html
@@ -175,10 +175,8 @@
                                   <div class="cart-button-wrap">
                                     <a class=
                                     "btn add-cart full-length"
-                                    title=
-                                    "3Dモデル_ソファ001_20181211_.zip"
-                                    href=
-                                    "https://booth.pm/downloadables/453130">
+                                    title="_007_sofa001.zip" href=
+                                    "https://booth.pm/downloadables/907513">
                                     <div class="u-d-block">
                                       <span class=
                                       "cmd-label">無料ダウンロード</span>
@@ -187,13 +185,13 @@
                                     "u-d-flex u-flex-wrap u-justify-content-center u-tpg-caption1 u-fw-normal">
                                       <div class=
                                       "u-text-ellipsis u-max-w-50">
-                                        3Dモデル_ソファ001_20181211_
+                                        _007_sofa001
                                       </div>
                                       <div>
                                         .zip
                                       </div>
                                       <div>
-                                        &nbsp;(6.42 MB)
+                                        &nbsp;(6.36 MB)
                                       </div>
                                     </div></a>
                                   </div>
