updated at: 2020-02-17 20:15, ３D首輪素材モデル - あすかパンのショップ - BOOTH

--- a/VRChat/63/982963.html
+++ b/VRChat/63/982963.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      ３D首輪素材モデル - a-suka09のショップ - BOOTH
+      ３D首輪素材モデル - あすかパンのショップ - BOOTH
     </title>
     <meta name="description" content=
     "ちょっと大きめの3Dの首輪の素材モデルです。 商品画像の二枚目は使用例です。キャラクターのモデルは同梱していません。 三角面：849 内容 ・首輪のBlendデータ ・首輪のfbxデータ 利用規約 この素材をダウンロードした時点で、利用規約に同意したものとみなします。 できること ・個人利用・商用利用 ・全年齢・Ｒ-18・Ｒ-18Ｇ作品への利用 ・モデルの改変 ・当データを使用した場合のクレジット表記は任意です。（でも、書いてくれると製作者はうれしいです） ・vrchatやゲーム・動画作成などご自由にお使いください。 禁止事項 ・改変の有無を問わず、素材データのみの再配布・販売">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "３D首輪素材モデル - a-suka09のショップ - BOOTH">
+    "３D首輪素材モデル - あすかパンのショップ - BOOTH">
     <meta name="twitter:description" content=
     "ちょっと大きめの3Dの首輪の素材モデルです。 商品画像の二枚目は使用例です。キャラクターのモデルは同梱していません。 三角面：849 内容 ・首輪のBlendデータ ・首輪のfbxデータ 利用規約 この素材をダウンロードした時点で、利用規約に同意したものとみなします。 できること ・個人利用・商用利用 ・全年齢・Ｒ-18・Ｒ-18Ｇ作品への利用 ・モデルの改変 ・当データを使用した場合のクレジット表記は任意です。（でも、書いてくれると製作者はうれしいです） ・vrchatやゲーム・動画作成などご自由にお使いください。 禁止事項 ・改変の有無を問わず、素材データのみの再配布・販売">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/11cd6f2b-5ce4-4d6f-9416-98fd540edac0/i/982963/048e380d-30b4-438c-a982-59af3ac79f9a_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "３D首輪素材モデル - a-suka09のショップ - BOOTH">
+    "３D首輪素材モデル - あすかパンのショップ - BOOTH">
     <meta property="og:description" content=
     "ちょっと大きめの3Dの首輪の素材モデルです。 商品画像の二枚目は使用例です。キャラクターのモデルは同梱していません。 三角面：849 内容 ・首輪のBlendデータ ・首輪のfbxデータ 利用規約 この素材をダウンロードした時点で、利用規約に同意したものとみなします。 できること ・個人利用・商用利用 ・全年齢・Ｒ-18・Ｒ-18Ｇ作品への利用 ・モデルの改変 ・当データを使用した場合のクレジット表記は任意です。（でも、書いてくれると製作者はうれしいです） ・vrchatやゲーム・動画作成などご自由にお使いください。 禁止事項 ・改変の有無を問わず、素材データのみの再配布・販売">
     <meta property="og:image" content=
@@ -122,11 +122,11 @@
                           href="https://a-suka09.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="a-suka09のショップ" class=
+                            <img alt="あすかパンのショップ" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/370234/icon_image/ab7de6bf-63d6-4569-a77c-fb0268974f30_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              a-suka09のショップ
+                              あすかパンのショップ
                             </div>
                           </div></a>
                         </div>
@@ -208,7 +208,7 @@
                           <a data-url=
                           "https://booth.pm/ja/items/982963"
                           data-lang="ja" data-hashtags="booth_pm"
-                          data-text="３D首輪素材モデル | a-suka09のショップ"
+                          data-text="３D首輪素材モデル | あすかパンのショップ"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
