updated at: 2020-02-17 23:21, オリジナル3Dモデル『ルシール』 - えりみ屋 - BOOTH

--- a/VRChat/47/1275447.html
+++ b/VRChat/47/1275447.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      オリジナル3Dモデル『ルシール』 - えりみみみ - BOOTH
+      オリジナル3Dモデル『ルシール』 - えりみ屋 - BOOTH
     </title>
     <meta name="description" content=
     "-モデル説明- オリジナル3Dモデル　『ルシール』 △　ポリゴン数　29209 制作者：Elimi_85 本モデルはUnityのHumanoid形式に対応したオリジナルモデルです。 VRChatでの使用を想定して製作していますが、ゲームや動画配信等でもご利用いただけます。 モデル説明の下に利用規約が記載されていますので、ご了承の上での購入をお願いします。 ・更新履歴 03/18 改変用PSDデータが間違っていたため差し替えました。 03/23 【V1.1.1】">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "オリジナル3Dモデル『ルシール』 - えりみみみ - BOOTH">
+    "オリジナル3Dモデル『ルシール』 - えりみ屋 - BOOTH">
     <meta name="twitter:description" content=
     "-モデル説明- オリジナル3Dモデル　『ルシール』 △　ポリゴン数　29209 制作者：Elimi_85 本モデルはUnityのHumanoid形式に対応したオリジナルモデルです。 VRChatでの使用を想定して製作していますが、ゲームや動画配信等でもご利用いただけます。 モデル説明の下に利用規約が記載されていますので、ご了承の上での購入をお願いします。 ・更新履歴 03/18 改変用PSDデータが間違っていたため差し替えました。 03/23 【V1.1.1】">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/4ac9b5cc-5f07-4d9f-a1ce-789db484dd42/i/1275447/a2ed5946-0a4f-4911-8619-bfd9448baffe_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "オリジナル3Dモデル『ルシール』 - えりみみみ - BOOTH">
+    "オリジナル3Dモデル『ルシール』 - えりみ屋 - BOOTH">
     <meta property="og:description" content=
     "-モデル説明- オリジナル3Dモデル　『ルシール』 △　ポリゴン数　29209 制作者：Elimi_85 本モデルはUnityのHumanoid形式に対応したオリジナルモデルです。 VRChatでの使用を想定して製作していますが、ゲームや動画配信等でもご利用いただけます。 モデル説明の下に利用規約が記載されていますので、ご了承の上での購入をお願いします。 ・更新履歴 03/18 改変用PSDデータが間違っていたため差し替えました。 03/23 【V1.1.1】">
     <meta property="og:image" content=
@@ -133,11 +133,11 @@
                           href="https://elimi.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="えりみみみ" class=
+                            <img alt="えりみ屋" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/5271352/icon_image/27e6fb5f-7013-4c49-97ab-17087c6fce3d_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              えりみみみ
+                              えりみ屋
                             </div>
                           </div></a>
                         </div>
@@ -234,7 +234,7 @@
                           <a data-url=
                           "https://booth.pm/ja/items/1275447"
                           data-lang="ja" data-hashtags="booth_pm"
-                          data-text="オリジナル3Dモデル『ルシール』 | えりみみみ"
+                          data-text="オリジナル3Dモデル『ルシール』 | えりみ屋"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
