updated at: 2020-02-18 16:51, VRChat向け3Dモデル『リサ』 - ストレイ・ラム - BOOTH

--- a/VRChat/75/1123775.html
+++ b/VRChat/75/1123775.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      VRChat向け3Dモデル『リサ』 - ST-12ay 1am B(ストレイ・ラム) - BOOTH
+      VRChat向け3Dモデル『リサ』 - ストレイ・ラム - BOOTH
     </title>
     <meta name="description" content="VRChat向け3Dモデル『リサ』">
     <meta name="keywords" content=
@@ -12,13 +12,13 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "VRChat向け3Dモデル『リサ』 - ST-12ay 1am B(ストレイ・ラム) - BOOTH">
+    "VRChat向け3Dモデル『リサ』 - ストレイ・ラム - BOOTH">
     <meta name="twitter:description" content="VRChat向け3Dモデル『リサ』">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/c5f5c24d-2662-43bc-98be-454d8623bccb/i/1123775/67b128df-2092-4aa5-ab9b-128255efcf85_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "VRChat向け3Dモデル『リサ』 - ST-12ay 1am B(ストレイ・ラム) - BOOTH">
+    "VRChat向け3Dモデル『リサ』 - ストレイ・ラム - BOOTH">
     <meta property="og:description" content="VRChat向け3Dモデル『リサ』">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/c5f5c24d-2662-43bc-98be-454d8623bccb/i/1123775/67b128df-2092-4aa5-ab9b-128255efcf85_base_resized.jpg">
@@ -118,11 +118,11 @@
                           href="https://stray-lamb.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="ST-12ay 1am B(ストレイ・ラム) "
-                            class="user-avatar at-item-summary"
-                            src="https://booth.pximg.net/c/48x48/users/5542405/icon_image/311ff251-f9f9-462c-80c0-da15bdcd2756_base_resized.jpg">
+                            <img alt="ストレイ・ラム" class=
+                            "user-avatar at-item-summary" src=
+                            "https://booth.pximg.net/c/48x48/users/5542405/icon_image/311ff251-f9f9-462c-80c0-da15bdcd2756_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              ST-12ay 1am B(ストレイ・ラム)
+                              ストレイ・ラム
                             </div>
                           </div></a>
                         </div>
@@ -221,8 +221,7 @@
                           <a data-url=
                           "https://booth.pm/ja/items/1123775"
                           data-lang="ja" data-hashtags="booth_pm"
-                          data-text=
-                          "VRChat向け3Dモデル『リサ』 | ST-12ay 1am B(ストレイ・ラム)"
+                          data-text="VRChat向け3Dモデル『リサ』 | ストレイ・ラム"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
