--- a/VRChat/86/1163486.html
+++ b/VRChat/86/1163486.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      VRChat向け3Dモデル『ユズルハ』 - ST-12ay 1am B(ストレイ・ラム) - BOOTH
+      VRChat向け3Dモデル『ユズルハ』 - ストレイ・ラム - BOOTH
     </title>
     <meta name="description" content=
     "都会に憧れるケモミミ村のお姉さん、雪うさぎのユズルハちゃんです。">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "VRChat向け3Dモデル『ユズルハ』 - ST-12ay 1am B(ストレイ・ラム) - BOOTH">
+    "VRChat向け3Dモデル『ユズルハ』 - ストレイ・ラム - BOOTH">
     <meta name="twitter:description" content=
     "都会に憧れるケモミミ村のお姉さん、雪うさぎのユズルハちゃんです。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/c5f5c24d-2662-43bc-98be-454d8623bccb/i/1163486/0197e102-0ce4-4df9-9323-b2e2b5ec08b6_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "VRChat向け3Dモデル『ユズルハ』 - ST-12ay 1am B(ストレイ・ラム) - BOOTH">
+    "VRChat向け3Dモデル『ユズルハ』 - ストレイ・ラム - BOOTH">
     <meta property="og:description" content=
     "都会に憧れるケモミミ村のお姉さん、雪うさぎのユズルハちゃんです。">
     <meta property="og:image" content=
@@ -133,11 +133,11 @@
                           href="https://stray-lamb.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="ST-12ay 1am B(ストレイ・ラム) "
-                            class="user-avatar at-item-summary"
-                            src="https://booth.pximg.net/c/48x48/users/5542405/icon_image/311ff251-f9f9-462c-80c0-da15bdcd2756_base_resized.jpg">
+                            <img alt="ストレイ・ラム" class=
+                            "user-avatar at-item-summary" src=
+                            "https://booth.pximg.net/c/48x48/users/5542405/icon_image/311ff251-f9f9-462c-80c0-da15bdcd2756_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              ST-12ay 1am B(ストレイ・ラム)
+                              ストレイ・ラム
                             </div>
                           </div></a>
                         </div>
@@ -236,8 +236,7 @@
                           <a data-url=
                           "https://booth.pm/ja/items/1163486"
                           data-lang="ja" data-hashtags="booth_pm"
-                          data-text=
-                          "VRChat向け3Dモデル『ユズルハ』 | ST-12ay 1am B(ストレイ・ラム)"
+                          data-text="VRChat向け3Dモデル『ユズルハ』 | ストレイ・ラム"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
