updated at: 2020-02-20 19:36, 3Dmodel「M1911A1」 - DAMYSOS ARMORY - BOOTH

--- a/VRChat/84/1040784.html
+++ b/VRChat/84/1040784.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      3Dmodel「M1911A1」 - DAMYSOS COMPANY - BOOTH
+      3Dmodel「M1911A1」 - DAMYSOS ARMORY - BOOTH
     </title>
     <meta name="description" content=
     "【Update】 モデルを作り直しより豪華にしました！ アニメーションなども追加 マガジンなどの小物も用意しました！！ 【紹介】 M1911A1です 初作品ですがVRchat、ゲーム制作などに使ってください 新しいバージョンになりましたが前のバージョンも付属します 【本体説明】 NEWver 本体 ポリゴン数　△12370 マガジン ポリゴン数　△228 45口径 ポリゴン数　△360 OLDver ポリゴン数　△1754 本体にはいくつかシェイプが仕込まれいています ・スライド可動 ・ハンマーコック ・トリガー ・バレル（わかる人にはわかる） 【製品内容】 NEWver">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "3Dmodel「M1911A1」 - DAMYSOS COMPANY - BOOTH">
+    "3Dmodel「M1911A1」 - DAMYSOS ARMORY - BOOTH">
     <meta name="twitter:description" content=
     "【Update】 モデルを作り直しより豪華にしました！ アニメーションなども追加 マガジンなどの小物も用意しました！！ 【紹介】 M1911A1です 初作品ですがVRchat、ゲーム制作などに使ってください 新しいバージョンになりましたが前のバージョンも付属します 【本体説明】 NEWver 本体 ポリゴン数　△12370 マガジン ポリゴン数　△228 45口径 ポリゴン数　△360 OLDver ポリゴン数　△1754 本体にはいくつかシェイプが仕込まれいています ・スライド可動 ・ハンマーコック ・トリガー ・バレル（わかる人にはわかる） 【製品内容】 NEWver">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/f6efbfac-0173-47ef-907b-000d759fb615/i/1040784/2d51d356-6d35-4645-a4af-0fd751e68d40_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "3Dmodel「M1911A1」 - DAMYSOS COMPANY - BOOTH">
+    "3Dmodel「M1911A1」 - DAMYSOS ARMORY - BOOTH">
     <meta property="og:description" content=
     "【Update】 モデルを作り直しより豪華にしました！ アニメーションなども追加 マガジンなどの小物も用意しました！！ 【紹介】 M1911A1です 初作品ですがVRchat、ゲーム制作などに使ってください 新しいバージョンになりましたが前のバージョンも付属します 【本体説明】 NEWver 本体 ポリゴン数　△12370 マガジン ポリゴン数　△228 45口径 ポリゴン数　△360 OLDver ポリゴン数　△1754 本体にはいくつかシェイプが仕込まれいています ・スライド可動 ・ハンマーコック ・トリガー ・バレル（わかる人にはわかる） 【製品内容】 NEWver">
     <meta property="og:image" content=
@@ -121,11 +121,11 @@
                           href="https://damysos.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="DAMYSOS COMPANY" class=
+                            <img alt="DAMYSOS ARMORY" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/1200276/icon_image/6f6fd81e-01d5-43a4-9cf9-09f4b9b3f4fa_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              DAMYSOS COMPANY
+                              DAMYSOS ARMORY
                             </div>
                           </div></a>
                         </div>
@@ -224,7 +224,7 @@
                           "https://booth.pm/ja/items/1040784"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "3Dmodel「M1911A1」 | DAMYSOS COMPANY"
+                          "3Dmodel「M1911A1」 | DAMYSOS ARMORY"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
